--- a/templates/result.html
+++ b/templates/result.html
@@ -24,7 +24,7 @@
         }
     </style>
 </head>
-<body style="background-image: url('{{ background_image }}'); background-size: cover; background-repeat: no-repeat; background-position: center; color: white;">
+<body style="background-image: url('https://images.unsplash.com/photo-1700513971603-eda40374ba0a?q=80&w=1170&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D'); background-size: cover; background-repeat: no-repeat; background-position: center; color: white;">
 
     <h1>Your Mood: {{ mood }}</h1>
     <h2>We suggest you try these:</h2>
